# Pardus-Mihmandar

./: .env.example  .gitignore  LICENSE  README.md
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: mod.rs  providers.rs  system_info.rs
app/src-tauri/src/system/: distro.rs
app/src/lib/api/: client.ts
app/src/lib/safety/: commandSafety.ts
app/src/lib/stores/: session.ts
docker/backend/: README.md
docker/frontend/: Dockerfile  README.md  docker-compose.yml
docker/nginx/: default.conf
docs/: api.md  architecture.md  development.md  mvp.md  security.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: dev.sh  setup.sh  test.sh
web/frontend/: README.md  package-lock.json  package.json
web/frontend/src/: app.css  app.html
web/frontend/src/lib/api/: client.ts
web/frontend/src/lib/components/: PageCard.svelte
web/frontend/src/lib/stores/: auth.ts
web/frontend/src/routes/: +layout.svelte  +page.svelte
web/frontend/src/routes/credits/: +page.svelte
web/frontend/src/routes/dashboard/: +page.svelte
web/frontend/src/routes/docs/: +page.svelte
web/frontend/src/routes/login/: +page.svelte
web/frontend/src/routes/providers/: +page.svelte
web/frontend/src/routes/register/: +page.svelte
web/frontend/src/routes/settings/: +page.svelte
web/frontend/src/routes/usage/: +page.svelte
