[package]
name = "pardus-mihmandar"
version = "0.1.0"
description = "Linux-first AI assistant for Debian beginners"
authors = ["Pardus Mihmandar"]
edition = "2021"

[lib]
name = "pardus_mihmandar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
